# deribit-trading-agent

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.gemini/commands/opsx/: apply.toml
.gemini/skills/openspec-apply-change/: SKILL.md
frontend/: design.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: accounts.ts  aiAgent.ts  client.ts  sse.ts
scripts/: testnet_smart_order_demo.py
src/deribit_trading/: __init__.py  __main__.py  mcp_server.py  rest_api.py
tests/: test_integration.py  test_mcp_smart_order_handler.py  test_payoff_futures.py  test_realtime_risk.py  test_smart_order.py
tests/agent/: test_connection.py  test_loop.py  test_summary.py  test_system_prompt.py  test_tool_specs.py
tests/api/: test_account_activate.py  test_accounts_endpoints.py  test_agent_routes.py  test_confirm_endpoint.py  test_mcp_atomic.py  test_smart_orders_api.py
tests/client/: test_book_summary.py
tests/models/: test_parse_instrument_kind.py
tests/persistence/: test_accounts.py  test_keystore_ai_agent.py  test_v3_to_v4_migration.py  test_write_audit.py
tests/smart_order/: test_build_config.py  test_escalation_ladder.py  test_intent_router.py  test_post_only_recovery.py  test_price_limit.py  test_sigma.py
(+137 files in other folders)
