[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deribit-trading"
version = "0.1.0"
description = "Deribit cryptocurrency futures and options trading system"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "cryptography>=43.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-socks>=2.8.1",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deribit_trading"]
